// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentProfilePageComponent should snap with a student field without information 1`] = `
<tm-student-profile-page
  Gender={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  editForm={[Function FormGroup]}
  httpRequestService={[Function HttpRequestService]}
  id=""
  ngbModal={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  statusMessageService={[Function StatusMessageService]}
  student={[Function Object]}
  studentProfileService={[Function StudentProfileService]}
  user="undefined"
>
  <div>
    <h1>
      Student Profile
    </h1>
    <div
      class="card"
    >
      <div
        class="card-body fill-plain"
      >
        <h1>
          
        </h1>
        <div
          class="row profile-pic-row"
        >
          <div
            class="col-3 cursor-pointer"
          >
            <img
              class="profile-pic"
              src=""
            />
          </div>
        </div>
        <div
          class="row profile-pic-row"
        >
          <div
            class="col-3 cursor-pointer"
          >
            <button
              class="btn btn-primary upload-edit-photo"
              ngbtooltip="Upload a profile picture (.jpg or .png, max size 5 MB)"
            >
               Upload/Edit Photo 
            </button>
            
          </div>
        </div>
        <form
          class="ng-untouched ng-pristine ng-valid"
          ng-reflect-form="[object Object]"
          novalidate=""
        >
          <div
            class="form-group"
            ngbtooltip="This is the name you prefer to be called by"
          >
            <label>
              The name you prefer to be called by instructors
            </label>
            <input
              class="form-control ng-untouched ng-pristine ng-valid"
              formcontrolname="studentshortname"
              id="studentshortname"
              ng-reflect-name="studentshortname"
            />
          </div>
          <div
            class="form-group"
            ngbtooltip="This is a long term contact email"
          >
            <label>
               Long-term Contact Email 
              <em
                class="font-weight-normal emphasis text-muted small"
              >
                - only visible to your instructors
              </em>
            </label>
            <input
              class="form-control ng-untouched ng-pristine ng-valid"
              formcontrolname="studentprofileemail"
              id="studentprofileemail"
              ng-reflect-name="studentprofileemail"
            />
          </div>
          <div
            class="form-group"
            ngbtooltip="This is the institution that you represent"
          >
            <label>
              Institute
            </label>
            <input
              class="form-control ng-untouched ng-pristine ng-valid"
              formcontrolname="studentprofileinstitute"
              id="studentprofileinstitute"
              ng-reflect-name="studentprofileinstitute"
            />
          </div>
          <div
            class="form-group"
            ngbtooltip="This is your nationality"
          >
            <label>
              Nationality
            </label>
            <select
              class="form-control ng-untouched ng-pristine ng-valid"
              formcontrolname="studentnationality"
              id="studentnationality"
              ng-reflect-name="studentnationality"
            >
              
            </select>
          </div>
          <label>
            Gender
          </label>
          <div
            class="form-group"
          >
            
            <div
              class="custom-control-inline"
            >
              <input
                class="student-gender-radio ng-untouched ng-pristine ng-valid"
                formcontrolname="studentgender"
                ng-reflect-form-control-name="studentgender"
                ng-reflect-name="studentgender"
                ng-reflect-value="MALE"
                type="radio"
              />
              <label
                class="student-gender-label"
              >
                Male
              </label>
            </div>
            <div
              class="custom-control-inline"
            >
              <input
                class="student-gender-radio ng-untouched ng-pristine ng-valid"
                formcontrolname="studentgender"
                ng-reflect-form-control-name="studentgender"
                ng-reflect-name="studentgender"
                ng-reflect-value="FEMALE"
                type="radio"
              />
              <label
                class="student-gender-label"
              >
                Female
              </label>
            </div>
            <div
              class="custom-control-inline"
            >
              <input
                class="student-gender-radio ng-untouched ng-pristine ng-valid"
                formcontrolname="studentgender"
                ng-reflect-form-control-name="studentgender"
                ng-reflect-name="studentgender"
                ng-reflect-value="OTHER"
                type="radio"
              />
              <label
                class="student-gender-label"
              >
                Not Specified
              </label>
            </div>
          </div>
          <div
            class="form-group"
            ngbtooltip="You may specify miscellaneous info about yourself e.g. links to home page, online CV, portfolio etc"
          >
            <label>
              More Information about Yourself
            </label>
            <textarea
              class="form-control ng-untouched ng-pristine ng-valid"
              formcontrolname="studentprofilemoreinfo"
              id="studentprofilemoreinfo"
              ng-reflect-name="studentprofilemoreinfo"
              placeholder="You may specify miscellaneous info about yourself e.g. links to home page, online CV, portfolio etc."
              rows="4"
            >
                        
            </textarea>
          </div>
          <div
            class="text-center"
          >
            <input
              class="btn btn-primary student-save-profile"
              type="submit"
              value="Save Profile"
            />
          </div>
          <div
            class="whisper"
          >
            This profile will be visible to all your instructors and coursemates.
          </div>
        </form>
        
        
      </div>
    </div>
  </div>
</tm-student-profile-page>
`;

exports[`StudentProfilePageComponent should snap with default fields 1`] = `
<tm-student-profile-page
  Gender={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  httpRequestService={[Function HttpRequestService]}
  id=""
  ngbModal={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  statusMessageService={[Function StatusMessageService]}
  studentProfileService={[Function StudentProfileService]}
  user="undefined"
>
  
</tm-student-profile-page>
`;

exports[`StudentProfilePageComponent should snap with values and a profile photo 1`] = `
<tm-student-profile-page
  Gender={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  editForm={[Function FormGroup]}
  httpRequestService={[Function HttpRequestService]}
  id=""
  nationalities={[Function Array]}
  ngbModal={[Function NgbModal]}
  pictureKey={[Function String]}
  profilePicLink={[Function String]}
  route={[Function ActivatedRoute]}
  statusMessageService={[Function StatusMessageService]}
  student={[Function Object]}
  studentProfileService={[Function StudentProfileService]}
  user="undefined"
>
  <div>
    <h1>
      Student Profile
    </h1>
    <div
      class="card"
    >
      <div
        class="card-body fill-plain"
      >
        <h1>
          
        </h1>
        <div
          class="row profile-pic-row"
        >
          <div
            class="col-3 cursor-pointer"
          >
            <img
              class="profile-pic"
              src="/webapi/students/profilePic?blob-key=$photo.jpg&time=1552509888215"
            />
          </div>
        </div>
        <div
          class="row profile-pic-row"
        >
          <div
            class="col-3 cursor-pointer"
          >
            <button
              class="btn btn-primary upload-edit-photo"
              ngbtooltip="Upload a profile picture (.jpg or .png, max size 5 MB)"
            >
               Upload/Edit Photo 
            </button>
            
            <button
              class="btn btn-danger"
              id="profile-delete-photo"
              ngbtooltip="Delete your profile picture"
            >
               Delete Photo 
            </button>
          </div>
        </div>
        <form
          class="ng-untouched ng-pristine ng-valid"
          ng-reflect-form="[object Object]"
          novalidate=""
        >
          <div
            class="form-group"
            ngbtooltip="This is the name you prefer to be called by"
          >
            <label>
              The name you prefer to be called by instructors
            </label>
            <input
              class="form-control ng-untouched ng-pristine ng-valid"
              formcontrolname="studentshortname"
              id="studentshortname"
              ng-reflect-name="studentshortname"
            />
          </div>
          <div
            class="form-group"
            ngbtooltip="This is a long term contact email"
          >
            <label>
               Long-term Contact Email 
              <em
                class="font-weight-normal emphasis text-muted small"
              >
                - only visible to your instructors
              </em>
            </label>
            <input
              class="form-control ng-untouched ng-pristine ng-valid"
              formcontrolname="studentprofileemail"
              id="studentprofileemail"
              ng-reflect-name="studentprofileemail"
            />
          </div>
          <div
            class="form-group"
            ngbtooltip="This is the institution that you represent"
          >
            <label>
              Institute
            </label>
            <input
              class="form-control ng-untouched ng-pristine ng-valid"
              formcontrolname="studentprofileinstitute"
              id="studentprofileinstitute"
              ng-reflect-name="studentprofileinstitute"
            />
          </div>
          <div
            class="form-group"
            ngbtooltip="This is your nationality"
          >
            <label>
              Nationality
            </label>
            <select
              class="form-control ng-untouched ng-pristine ng-valid"
              formcontrolname="studentnationality"
              id="studentnationality"
              ng-reflect-name="studentnationality"
            >
              
              <option
                ng-reflect-value="Derpistan"
                value="Derpistan"
              >
                 Derpistan 
              </option>
              <option
                ng-reflect-value="Blablaland"
                value="Blablaland"
              >
                 Blablaland 
              </option>
            </select>
          </div>
          <label>
            Gender
          </label>
          <div
            class="form-group"
          >
            
            <div
              class="custom-control-inline"
            >
              <input
                class="student-gender-radio ng-untouched ng-pristine ng-valid"
                formcontrolname="studentgender"
                ng-reflect-form-control-name="studentgender"
                ng-reflect-name="studentgender"
                ng-reflect-value="MALE"
                type="radio"
              />
              <label
                class="student-gender-label"
              >
                Male
              </label>
            </div>
            <div
              class="custom-control-inline"
            >
              <input
                class="student-gender-radio ng-untouched ng-pristine ng-valid"
                formcontrolname="studentgender"
                ng-reflect-form-control-name="studentgender"
                ng-reflect-name="studentgender"
                ng-reflect-value="FEMALE"
                type="radio"
              />
              <label
                class="student-gender-label"
              >
                Female
              </label>
            </div>
            <div
              class="custom-control-inline"
            >
              <input
                class="student-gender-radio ng-untouched ng-pristine ng-valid"
                formcontrolname="studentgender"
                ng-reflect-form-control-name="studentgender"
                ng-reflect-name="studentgender"
                ng-reflect-value="OTHER"
                type="radio"
              />
              <label
                class="student-gender-label"
              >
                Not Specified
              </label>
            </div>
          </div>
          <div
            class="form-group"
            ngbtooltip="You may specify miscellaneous info about yourself e.g. links to home page, online CV, portfolio etc"
          >
            <label>
              More Information about Yourself
            </label>
            <textarea
              class="form-control ng-untouched ng-pristine ng-valid"
              formcontrolname="studentprofilemoreinfo"
              id="studentprofilemoreinfo"
              ng-reflect-name="studentprofilemoreinfo"
              placeholder="You may specify miscellaneous info about yourself e.g. links to home page, online CV, portfolio etc."
              rows="4"
            >
                        
            </textarea>
          </div>
          <div
            class="text-center"
          >
            <input
              class="btn btn-primary student-save-profile"
              type="submit"
              value="Save Profile"
            />
          </div>
          <div
            class="whisper"
          >
            This profile will be visible to all your instructors and coursemates.
          </div>
        </form>
        
        
      </div>
    </div>
  </div>
</tm-student-profile-page>
`;
